# lcs

./: README.txt  build_drop_pkg  build_pkg  plug_to_pack.sh  ref_pkg.sh  svn_build_pkg  test-svn
debian-lcs-keyring/: Makefile
debian-lcs-keyring/debian/: README.Debian  changelog  control  copyright  files  prerm  (+2 more)
lcs-agendas/: Makefile
lcs-anti-spam/: Makefile
lcs-apache2ssl/: Makefile
lcs-assr/: Makefile
lcs-base/: README.txt
lcs-bcdiweb/: Makefile
lcs-biilan2/: Makefile
lcs-caenstats/: Makefile
lcs-cas/: Makefile
lcs-casmrt/: Makefile
lcs-cdt/: Makefile
lcs-certmanager/: Makefile
lcs-claro/: Makefile
lcs-clientftp/: Makefile
lcs-desktop/: Makefile
lcs-dns/: Makefile
lcs-elfinder-old/: Makefile
lcs-ent/: Makefile
lcs-ftpproxy/: Makefile
lcs-gedowl/: Makefile
lcs-gepi/: Makefile
lcs-ggt/: Makefile
lcs-grr/: Makefile
lcs-helpdesk/: Makefile
lcs-imap/: Makefile
lcs-imap-ssl/: Makefile
lcs-jabber/: Makefile  TODO
lcs-libjs/: Makefile
lcs-lightsquid/: Makefile
lcs-maintenance/: Makefile
lcs-monlcs/: Makefile
lcs-notify/: Makefile
lcs-openssh-5.0p1/: Makefile  config.h  config.status  opensshd.init  scp  sftp  sftp-server  ssh  ssh-add  ssh-agent  ssh-keygen  ssh-keyscan  ssh-keysign  ssh-rand-helper  ssh.1.out  ssh_config.5.out  sshd  sshd.8.out  sshd_config.5.out  survey.sh
lcs-openvpn/: Makefile
lcs-phpsysinfo/: Makefile
lcs-pla/: Makefile
lcs-pma/: Makefile
lcs-pop/: Makefile
lcs-preinstall/: Makefile
lcs-roundcube/: Makefile
lcs-sacoche/: Makefile
lcs-sarg/: CONTRIBUTORS  ChangeLog  Makefile.in  README  aclocal.m4  auth.c  authfail.c  charset.c  configure  configure.in  convlog.c  css.c  css.tpl  dansguardian_log.c  dansguardian_report.c  datafile.c  decomp.c  denied.c  download.c  email.c  exclude.c  getconf.c  grepday.c  html.c  index.c  indexonly.c  ip2name.c  language.c  lastlog.c  log.c  realtime.c  repday.c  report.c  sarg.1  sarg.conf  siteuser.c  smartfilter.c  sort.c  splitlog.c  squidguard_log.c  (+9 more)
lcs-sarg/debian/: README.Debian  changelog  control  copyright  dirs  postinst  postrm  rules  sarg-reports  sarg-reports.conf  sarg-reports.cron.monthly  sarg.conf  watch
lcs-sarg/debian/patches/: sarg-french.patch  sarg-polish.patch  sarg-turkish.patch
lcs-sarg/fonts/: README
lcs-sarg/include/: conf.h  defs.h  info.h
lcs-sarg/languages/: Bulgarian_windows1251  Catalan  Czech  Czech_UTF8  Dutch  English  French  German  Greek  Hungarian  Indonesian  Italian  Japanese  Latvian  Polish  Portuguese  Romanian  Russian_UTF-8  Russian_koi8  Russian_windows1251  Serbian  Slovak  Spanish  Turkish  Ukrainian_windows1251
lcs-sarg/sarg-php/: LANGUAGES  language.php  sarg-block-it.php  sarg-squidguard-block.php  translate.this
lcs-sarg/sbin/: lcs-clean-sarg
lcs-security/: Makefile
lcs-security-0.1/: Makefile
lcs-smbwebclient/: Makefile
lcs-smtp/: Makefile
lcs-spip/: Makefile
lcs-squid/: Makefile
lcs-squidguard/: Makefile
lcs-squirrelmail/: Makefile
lcs-sysinfo/: Makefile
lcs-template/: Makefile
lcs-web/: Makefile
lcs-wiki/: Makefile
lcs-zonep/: Makefile
lcse3-monitor/: Makefile
old/: README.txt  tr_pkg
openssh-5.0p1/: README
tgz_area/: cdt-0-4.html  cdt-0.4.tgz  cdt-1.02.html  cdt-1.02.tgz
(+6041 files in other folders)
