dnl Process this file with autoconf to produce a configure script.
AC_INIT(log.c)
AC_CONFIG_AUX_DIR(cfgaux)

LDFLAGS="-g"

AC_CANONICAL_HOST

AC_ARG_WITH(gcc,
[  --without-gcc           use CC to compile])

test -n "$CC" && cc_specified=yes
case ${with_gcc} in
  yes ) CC=gcc ;;
dnl yes ) CC=g++ ;;
  no  ) CC=cc ;;
  *   ) AC_PROG_CC;;
dnl  *   ) AC_PROG_CXX ;;
esac

if test "${CC}" = "cc" ; then
   CFLAGS="${CFLAGS} -w -g -O2 -Aa"
else
   CFLAGS="${CFLAGS} -w"
fi

case "$host" in
   *-solaris*)
   LDFLAGS="${LDFLAGS} -lsocket -lnsl"
   CFLAGS="-DSOLARIS ${CFLAGS}"
   ;;
esac

#dnl Checks for programs.
#AC_PROG_CC

dnl Check for headers
AC_HEADER_DIRENT
AC_HEADER_STDC

dnl Check for iconv
AM_ICONV
if test -n "$LIBICONV" ; then
  LIBS="$LIBS $LIBICONV"
fi

AC_CHECK_HEADERS(stdio.h stdlib.h string.h strings.h sys/time.h time.h unistd.h sys/dirent.h \
		 dirent.h sys/socket.h netdb.h arpa/inet.h sys/types.h netinet/in.h sys/stat.h \
		 ctype.h gd.h gdfontl.h gdfontt.h gdfonts.h gdfontmb.h gdfontg.h iconv.h \
		 errno.h sys/resource.h)

AC_CHECK_LIB(gd, gdImagePng,LIBS="-lgd ${LIBS}"; HAVE_GD="yes", HAVE_GD="")

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

# Check whether fopen64 is available and whether _LARGEFILE64_SOURCE
# needs to be defined for it
AC_MSG_CHECKING([for fopen64])
AC_CACHE_VAL(bu_cv_have_fopen64,
[AC_TRY_LINK([#include <stdio.h>], [FILE *f = fopen64 ("/tmp/foo","r");],
bu_cv_have_fopen64=yes,
[saved_CPPFLAGS=$CPPFLAGS
 CPPFLAGS="$CPPFLAGS -D_LARGEFILE64_SOURCE"
 AC_TRY_LINK([#include <stdio.h>], [FILE *f = fopen64 ("/tmp/foo","r");],
bu_cv_have_fopen64="need -D_LARGEFILE64_SOURCE",
bu_cv_have_fopen64=no)
 CPPFLAGS=$saved_CPPFLAGS])])
AC_MSG_RESULT($bu_cv_have_fopen64)
if test "$bu_cv_have_fopen64" != no; then
  AC_DEFINE([HAVE_FOPEN64], 1,
            [Is fopen64 available?])
  if test "$bu_cv_have_fopen64" = "need -D_LARGEFILE64_SOURCE"; then
    AC_DEFINE([_LARGEFILE64_SOURCE], 1,
              [Enable LFS])
  fi
fi


dnl Select bindir
AC_ARG_ENABLE(bindir,
[  --enable-bindir=bindir
                        Select bindir ],
[
    if test "$enableval"; then
        BINDIR=$enableval
    fi
],[BINDIR="/usr/bin"])
echo "using $BINDIR as the SARG binary"
AC_SUBST(BINDIR)

dnl Select mandir
AC_ARG_ENABLE(mandir,
[  --enable-mandir=mandir
                        Select mandir ],
[
    if test "$enableval"; then
        MANDIR=$enableval
    fi
],[MANDIR="/usr/local/man/man1"])
echo "using $MANDIR as the SARG man page"
AC_SUBST(MANDIR)

dnl Select sysconfdir
AC_ARG_ENABLE(sysconfdir,
[  --enable-sysconfdir=sysconfdir
                        Select sysconfdir ],
[
    if test "$enableval"; then
        SYSCONFDIR=$enableval
    fi
],[SYSCONFDIR="/usr/local/sarg"])
echo "using $SYSCONFDIR as the SARG configuration dir"
AC_SUBST(SYSCONFDIR)

dnl Select htmldir
AC_ARG_ENABLE(htmldir,
[  --enable-htmldir=htmldir
                        Select htmldir ],
[
    if test "$enableval"; then
        HTMLDIR=$enableval
    fi
],[HTMLDIR="/var/www/html"])
echo "using $HTMLDIR as the WWW Document Root dir"
AC_SUBST(HTMLDIR)


AC_OUTPUT(Makefile)
